test/functions/deitz/iterators/test_zip_check1.chpl
for i in zip(1..5, 1..4) do
  writeln(i);
